--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,6 @@
 	</repositories>
 
 	<build>
-		<sourceDirectory>src</sourceDirectory>
-		<testSourceDirectory>test</testSourceDirectory>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -80,4 +78,4 @@
 
 	<dependencies>
 	</dependencies>
-</project>
+</project>https://github.com/libgdx/packr.git
