added java app that does the actual work, packages things nicely, but somehow the app doesn't start on Mac OS X

--- a/native/config.json
+++ b/native/config.json
@@ -1,6 +1,6 @@
 {
-   "jar": "cuboc.jar",
-   "mainClass": "com/badlogic/cubocy/CubocDesktop",
+   "jar": "packr-1.0.jar",
+   "mainClass": "com/badlogicgames/packr/TestApp",
    "vmArgs": [
    ]
 }
