fixed info.plist, all is wokring now :D

--- a/native/config.json
+++ b/native/config.json
@@ -1,6 +1,7 @@
 {
-   "jar": "packr-1.0.jar",
-   "mainClass": "com/badlogicgames/packr/TestApp",
-   "vmArgs": [
-   ]
+    "jar": "packr-1.0.jar",
+    "mainClass": "com/badlogicgames/packr/TestApp",
+    "vmArgs": [
+        "-Xmx512M"
+    ]
 }
