--- a/native/config.json
+++ b/native/config.json
@@ -1,5 +1,5 @@
 {
-    "jar": "packr-1.0.jar",
+    "jar": "packr-1.0-SNAPSHOT.jar",
     "mainClass": "com/badlogicgames/packr/TestApp",
     "vmArgs": [
         "-Xmx512M"
