--- a/pom.xml
+++ b/pom.xml
@@ -105,5 +105,10 @@
 			<version>1.7</version>
 			<type>jar</type>
 		</dependency>
+		<dependency>
+			<groupId>com.eclipsesource.minimal-json</groupId>
+			<artifactId>minimal-json</artifactId>
+			<version>0.9.1</version>
+		</dependency>
 	</dependencies>
 </project>
