--- a/example-config-mac.json
+++ b/example-config-mac.json
@@ -3,13 +3,14 @@
     "jdk": "/Users/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-macosx-x86_64-image.zip",
     "executable": "myapp",
     "appjar": "target/packr-1.0-SNAPSHOT.jar",
-    "config": "example-config.json",
+    "mainclass": "com/badlogicgames/packr/TestApp",
+    "vmargs": [
+    	"-Xmx1G"
+    ],
     "resources": [
         "pom.xml",
         "src/main/resources"
     ],
-    "treeshake": "com/badlogicgames/packr/TestApp",
-    "excludejre": [],
-    "includejre": [],
+    "minimizeJre": true,
     "outdir": "out-mac"
 }
