--- a/example-config-linux.json
+++ b/example-config-linux.json
@@ -1,6 +1,6 @@
 {
     "platform": "linux",
-    "jdk": “/Users/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-linux-amd64-image.zip",
+    "jdk": "/home/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-linux-amd64-image.zip",
     "executable": "myapp",
     "appjar": "target/packr-1.0-SNAPSHOT.jar",
     "mainclass": "com/badlogicgames/packr/TestApp",
@@ -12,5 +12,5 @@
         "src/main/resources"
     ],
     "minimizeJre": true,
-    "outdir": "out-win"
+    "outdir": "out-lin"
 }
