--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<groupId>com.badlogicgames.packr</groupId>
 	<artifactId>packr</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0</version>
+	<version>1.1-SNAPSHOT</version>
 
 	<name>packr</name>
 	<description>Packages OpenJDK, your JAR and assets for Windows, Linux and Mac OS X</description>
