Fixed the "minimizeJre" commandline/json param to be lowercase, like all other params

--- a/example-config-mac.json
+++ b/example-config-mac.json
@@ -11,6 +11,6 @@
         "pom.xml",
         "src/main/resources"
     ],
-    "minimizeJre": true,
+    "minimizejre": true,
     "outdir": "out-mac"
 }
