updated minimization mechanism

--- a/example-config-linux.json
+++ b/example-config-linux.json
@@ -11,6 +11,6 @@
         "pom.xml",
         "src/main/resources"
     ],
-    "minimizejre": true,
+    "minimizejre": "soft",
     "outdir": "out-lin"
 }
