--- a/example-config-linux.json
+++ b/example-config-linux.json
@@ -2,8 +2,8 @@
     "platform": "linux64",
     "jdk": "/home/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-linux-amd64-image.zip",
     "executable": "myapp",
-    "appjar": "target/packr-1.1-SNAPSHOT.jar",
-    "mainclass": "com/badlogicgames/packr/TestApp",
+    "classpath": "target/packr-2.0-SNAPSHOT.jar",
+    "mainclass": "com.badlogicgames.packr.TestApp",
     "vmargs": [
     	"-Xmx1G"
     ],
