--- a/example-config-mac.json
+++ b/example-config-mac.json
@@ -2,8 +2,8 @@
     "platform": "mac",
     "jdk": "/Users/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-macosx-x86_64-image.zip",
     "executable": "myapp",
-    "appjar": "target/packr-1.2-SNAPSHOT.jar",
-    "mainclass": "com/badlogicgames/packr/TestApp",
+    "classpath": "target/packr-1.2-SNAPSHOT.jar",
+    "mainclass": "com.badlogicgames.packr.TestApp",
     "vmargs": [
     	"-Xmx1G"
     ],
