Fixed classpath property in examples.

--- a/example-config-mac.json
+++ b/example-config-mac.json
@@ -2,7 +2,9 @@
     "platform": "mac",
     "jdk": "/Users/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-macosx-x86_64-image.zip",
     "executable": "myapp",
-    "classpath": "target/packr-1.2-SNAPSHOT.jar",
+    "classpath": [
+        "target/packr-2.0-SNAPSHOT.jar"
+    ],
     "mainclass": "com.badlogicgames.packr.TestApp",
     "vmargs": [
     	"-Xmx1G"
