--- a/example-config-linux.json
+++ b/example-config-linux.json
@@ -2,7 +2,9 @@
     "platform": "linux64",
     "jdk": "/home/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-linux-amd64-image.zip",
     "executable": "myapp",
-    "classpath": "target/packr-2.0-SNAPSHOT.jar",
+    "classpath": [
+        "target/packr-2.0-SNAPSHOT.jar"
+    ],
     "mainclass": "com.badlogicgames.packr.TestApp",
     "vmargs": [
     	"-Xmx1G"
