Proper use of CMAKE_OSX_DEPLOYMENT_TARGET.

--- a/src/main/native/packr/CMakeLists.txt
+++ b/src/main/native/packr/CMakeLists.txt
@@ -7,6 +7,8 @@ cmake_minimum_required(VERSION 2.8)
 get_filename_component(FIPS_ROOT_DIR "../fips" ABSOLUTE)
 include("${FIPS_ROOT_DIR}/cmake/fips.cmake")
 
+set(CMAKE_OSX_DEPLOYMENT_TARGET "10.7")
+
 fips_setup()
 fips_project(packr-native)
 fips_add_subdirectory(src)
