Update Windows json exaample

--- a/example-config-windows.json
+++ b/example-config-windows.json
@@ -1,5 +1,5 @@
 {
-    "platform": "windows",
+    "platform": "windows32",
     "jdk": "C:/Users/badlogic/Downloads/openjdk-1.7.0-u45-unofficial-icedtea-2.4.3-windows-i586-image.zip",
     "executable": "myapp",
     "classpath": [
