--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
 				<version>2.4</version>
+				<configuration>
+					<excludeResources>true</excludeResources>
+				</configuration>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
