Support new JDK structure (Java 9++). Support tar.gz files as JDK archives. Support environment variable definition for JDK in Packr config file: '${JAVA_HOME}'.

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-compress</artifactId>
+			<version>1.18</version>
+		</dependency>
+		<dependency>
 			<groupId>org.zeroturnaround</groupId>
 			<artifactId>zt-zip</artifactId>
 			<version>1.10</version>
