--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,3 @@
-/target
-.DS_STORE
-.project
-.classpath
-.settings
-native/build
-native/obj
-native/packr.xcodeproj/
-native/packr.sln
-native/packr.vcxproj*
-.idea/
-*.iml
+# Grade build directories
+.gradle
+build/
