--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,4 @@ jobs:
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: ./gradlew --refresh-dependencies --no-build-cache clean build
+      run: ./gradlew --refresh-dependencies --no-build-cache -i --stacktrace clean build
