--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,23 +14,22 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+#    strategy:
+    #      matrix:
+    #        os: [ubuntu-latest, macos-latest, windows-latest]
     # The type of runner that the job will run on
     runs-on: windows-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with:
-        java-version: 8
-    - name: Setup C++ environment
-      uses: kurocha/setup-cpp@v1
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with:
+          java-version: 8
+      - name: Setup C++ environment
+        uses: kurocha/setup-cpp@v1
 
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: ./gradlew --refresh-dependencies --no-build-cache -i --stacktrace clean build
+      # Runs a single command using the runners shell
+      - name: Run a one-line script
+        run: ./gradlew --refresh-dependencies --no-build-cache -i --stacktrace clean build
