Add directed acyclic graphs and JUnit artifacts to GitLab CI

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,24 +26,39 @@ publishOsxExecutable:
 
 buildWindows:
   stage: build
+  needs: [ "publishWindowsExecutable", "publishLinuxExecutable", "publishOsxExecutable" ]
   tags:
     - windows
   script:
     - cmd.exe "/c gradlew --no-daemon -i --no-build-cache --refresh-dependencies clean build"
+  artifacts:
+    when: always
+    reports:
+      junit: ./**/build/test-results/test/**/TEST-*.xml
 
 buildMac:
   stage: build
+  needs: [ "publishWindowsExecutable", "publishLinuxExecutable", "publishOsxExecutable" ]
   tags:
     - osx
   script:
     - ./gradlew --no-daemon -i --no-build-cache --refresh-dependencies clean build
+  artifacts:
+    when: always
+    reports:
+      junit: ./**/build/test-results/test/**/TEST-*.xml
 
 publishLinux:
   stage: publish
+  needs: [ "publishWindowsExecutable", "publishLinuxExecutable", "publishOsxExecutable" ]
   tags:
     - ubuntu
   script:
     - ./gradlew --no-daemon -i --no-build-cache --refresh-dependencies clean build publish
+  artifacts:
+    when: always
+    reports:
+      junit: ./**/build/test-results/test/**/TEST-*.xml
 
 after_script:
   - echo "End CI"
