--- a/gradle.properties
+++ b/gradle.properties
@@ -17,6 +17,6 @@
 
 org.gradle.caching=true
 org.gradle.parallel=true
-org.gradle.configureondemand=true
+#org.gradle.configureondemand=true
 # Workaround for Maven Central not supporting SHA256 and 512 hashes.
 systemProp.org.gradle.internal.publish.checksums.insecure=true
