--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 #
 #
 
-org.gradle.caching=true
+#org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.configureondemand=true
 # Workaround for Maven Central not supporting SHA256 and 512 hashes.
